--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
+    "quill": "^2.0.2",
+    "quill-better-table": "^1.2.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
