--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.5",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
     "formik": "^2.4.6",
+    "html-react-parser": "^5.1.15",
     "quill": "^2.0.2",
     "quill-better-table": "^1.2.10",
     "react": "^18.3.1",
