--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "yup": "^1.4.0"
   },
   "scripts": {
